--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -1,78 +1,46 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.png' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'login.css' %}" />
+    <title>medE</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .login-container {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-
-        .login-container input {
-            /* width: 100%; */
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .login-container button {
-            background-color: #4caf50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
-
-        .login-container button:hover {
-            background-color: #45a049;
-        }
-
-        .login-container .options {
-            margin-top: 15px;
-        }
-
-        .login-container .options a {
-            margin-right: 15px;
-            text-decoration: none;
-            color: #333;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="login-container">
-        <h2>Login</h2>
-        <form method="post" action="{% url 'mylogin' %}">
-            {% csrf_token %}
-            <input type="tel" name="phone_number" placeholder="Phone Number" required><br>
-            <input type="password" name="password" placeholder="Password" required><br>
-            <button type="submit">Login</button>
-        </form>
-        <div class="options">
-            <a href="{% url 'myregister' %}">Register Now</a>
-            <a href="{% url 'forgotpassword' %}" class="form-btn">Forget Password</a>
+  <body>
+    <div class="container" id="container">
+        <div class="form-container sign-in">
+            <form method="post" action="{% url 'mylogin' %}">
+                {% csrf_token %}
+                <img src="{% static 'favicon.png' %}" alt=" medX logo">
+                <input
+                type="tel" name="phone_number" placeholder="Phone Number" required/>
+                <input type="password" name="password" placeholder="Password" required/>
+                <button type="submit">Login</button>
+                <button><a href="{% url 'forgotpassword' %}">Forget Password</a></button>
+                <!-- <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
+                </div> -->
+            </form>
+        </div>
+        <div class="toggle-container toggle-left">
+          <div class="toggle bg-left">
+            <div class="toggle-panel">
+              
+              <h1>Welcome Back!</h1>
+              <!-- <button id="login"><a href="{% url 'myregister' %}">Register Now</a></button> -->
+            </div>
+          </div>
         </div>
     </div>
-</body>
-
+  </body>
 </html>
-
