--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>medE</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-	<link rel="icon" type="image/x-icon" href="{% static 'Favicon.png' %}">
+	<link rel="icon" type="image/x-icon" href="{% static 'favicon.png' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -586,7 +586,7 @@
 		<div class="footer-top section">
 			<div class="container">
 				<div class="footer-brand">
-					<a href="#" class="logo"><img style="border-radius: 10px;" src="{% static 'Favicon.png' %}"
+					<a href="#" class="logo"><img style="border-radius: 10px;" src="{% static 'favicon.png' %}"
 							width="80" alt="logo"></a>
 					<p class="footer-text">
 						If you have any queries please contact us at <a href="mailto:support@gmail.com"
