--- a/templates/index.html
+++ b/templates/index.html
@@ -445,8 +445,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">MEN'S CARE</h3>
+								<a href="{%url 'category' p_category='MENS'%}" class="menu-title">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='MENS'%}" class="menu-title">Show A</a>
 						</div>
 					</div>
 
@@ -457,9 +457,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">Women's Choice</h3>
-
+								<a href="{%url 'category' p_category='WOMEN'%}" class="menu-title">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='WOMEN'%}" class="menu-title">Show All</a>
 						</div>
 					</div>
 					<div class="category-item">
@@ -469,9 +468,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">Sexual Wellness</h3>
-
+								<a href="{%url 'category' p_category='Sexual Wellness'%}">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='Sexual Wellness'%}">Show All</a>
 						</div>
 					</div>
 					<div class="category-item">
@@ -481,9 +479,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">Baby Care</h3>
-
+								<a href="{%url 'category' p_category='BABY CARE'%}" class="menu-title">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='BABY CARE'%}" class="menu-title">Show All</a>
 						</div>
 					</div>
 					<div class="category-item">
@@ -493,8 +490,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">Diabetics Care</h3>
+								<a href="{%url 'category' p_category='Diabetes'%}">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='Diabetes'%}">Show All</a>
 						</div>
 					</div>
 				</div>
