--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -23,7 +23,8 @@
                 type="tel" name="phone_number" placeholder="Phone Number" required/>
                 <input type="password" name="password" placeholder="Password" required/>
                 <button type="submit">Login</button>
-                <button><a href="{% url 'forgotpassword' %}">Forget Password</a></button>
+                <button><a href="{% url 'forgotpassword' %}">Forgot Password?</a></button>
+                <button id="login"><a href="{% url 'myregister' %}">Register Now</a></button>
                 <!-- <div class="social-icons">
                     <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
@@ -37,7 +38,6 @@
             <div class="toggle-panel">
               
               <h1>Welcome Back!</h1>
-              <!-- <button id="login"><a href="{% url 'myregister' %}">Register Now</a></button> -->
             </div>
           </div>
         </div>
