--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -31,7 +31,7 @@
           {% csrf_token %}
           
           <input type="text" name="password" id="password" placeholder="Password" required/>
-          <label for="otp">Enter OTP:</label>
+          <h3 for="otp">Enter OTP:</h3>
           <div class="input-field">
             <input type="number" name="otp" id="otp" />
             <input type="number" name="otp" id="otp" disabled />
