--- a/static/login.css
+++ b/static/login.css
@@ -44,18 +44,12 @@ body {
   flex-direction: column;
   height: 100vh;
 }
-body::-webkit-scrollbar {
-  width: 15px;
-}
-body::-webkit-scrollbar-track {
-  background: white;
-  border-left: 1px solid hsl(0, 0%, 93%);
-}
-body::-webkit-scrollbar-thumb:hover {
-  background: hsl(0, 0%, 70%);
-}
 
 /*** -------------------------------------- ***/
+
+/* ////////////// */
+/* CONTAINER */
+/* ////////////// */
 
 .container {
     background-color: white;
@@ -120,20 +114,24 @@ body::-webkit-scrollbar-thumb:hover {
     /* height: 100%; */
 }
 
-.social-icons {
-    margin: 20px 0;
+/* ////////////////////////////////////////// */
+/* THIS IS TO ACTIVATE SOCIAL ICONS AND LINKS */
+/* ////////////////////////////////////////// */
+
+/* .social-icons {
+  margin: 20px 0;
 }
 
 .social-icons a {
-    border: 1px solid #ccc;
-    border-radius: 20%;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 3px;
-    width: 40px;
-    height: 40px;
-}
+  border: 1px solid #ccc;
+  border-radius: 20%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 3px;
+  width: 40px;
+  height: 40px;
+} */
 
 .container input {
     background-color: #eee;
@@ -146,13 +144,17 @@ body::-webkit-scrollbar-thumb:hover {
     outline: none;
 }
 
+/* ////////////// */
+/* FORMS */
+/* ////////////// */
+
 .form-container {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  top: 0;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sign-in {
@@ -247,4 +249,86 @@ img {
 .input-field input::-webkit-inner-spin-button,
 .input-field input::-webkit-outer-spin-button{
   display: none;
+}
+
+
+/* THIS IS TO ACTIVATE/DEACTIVATE AFTER OTP IS SENT */
+
+/* .form-container form:nth-child(3){
+  display: none;
+} */
+
+/* //////////////////////////////////////////////// */
+
+
+/* ////////////// */
+/* RESPONSIVENESS */
+/* ////////////// */
+
+
+@media (min-width: 0px) {
+  .container {
+    border-radius: 0;
+    min-height: 450px;
+    background: linear-gradient(to left, #ff9f9f, #ff7979);
+  }
+  .container form {
+    background: none;
+  }
+  
+  .container h3 {
+    color: white;
+  }
+  .container button {
+    background-color: rgb(255, 209, 209);
+    color: #ff7979;
+    padding: 10px 0;
+    border: none;
+  }
+  .container a {
+    color: #ff7979;
+  }
+  .sign-in,
+  .sign-up {
+    width: 100%;
+  }
+  .toggle-container {
+    display: none;
+  }
+  .form-container form {
+    width: 80%;
+  }
+}
+
+
+@media (min-width: 570px) {
+  .container {
+    border-radius: 30px;
+    min-height: 500px;
+    background: white;
+  }
+  .container button {
+    background-color: #ff7979;
+    color: white;
+    padding: 10px 45px;
+    border: 2px solid #ff7979;
+  }
+  .container a {
+    color: white;
+  }
+  
+  .container h3 {
+    color: #1b1c1e;
+  }
+  .sign-in,
+  .sign-up {
+    width: 50%;
+  }
+  .toggle-container {
+    display: block;
+    width: 50%;
+  }
+  .toggle-panel h1 {
+    font-size: 2.2rem;
+  }
 }
