--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -352,7 +352,7 @@
 		<!-- <h1>{{ user }}</h1> -->
 		<!-- <div class="container"> -->
 		<form action="{% url 'update_profile' %}" method="post" class="registration-form container row active">
-			<h1>Profile</h1>
+			<h1>Account</h1>
 			{% csrf_token %}
 			<div class="input-box col-sm-6">
 				<label for="">First Name</label>
