--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -364,11 +364,11 @@
 				<input class="lastname" type="text" name="last_name" placeholder="Last Name" value="{{ user.last_name }}">
 				<!-- <button><ion-icon name="create-outline"></ion-icon></button> -->
 			</div>
-			<div class="input-box col-sm-6">
+			<!-- <div class="input-box col-sm-6">
 				<label for="">Phone</label>
 				<input class="phone" type="phone" name="phone_number" placeholder="Phone Number" value="{{ user.phone_number }}">
-				<!-- <button><ion-icon name="create-outline"></ion-icon></button> -->
-			</div>
+				
+			</div> -->
 			<div class="input-box col-sm-6">
 				<label for="">Birth Date</label>				
 				<!-- Manually format user.dob using template tags -->
