--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -1,77 +1,82 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.png' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'login.css' %}" />
+    <title>medE</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
+  <body>
+    <div class="container" id="container">
+      <!-- Form to Send OTP -->
+      
+      <div class="form-container sign-up" style="display: flex;flex-direction: column;">
+        <img src="{% static 'favicon.png' %}" alt=" medX logo">
+        <form style="padding: 0;" method="post" action="{% url 'send_otp' %}">
+            {% csrf_token %}
+            <div class="num-input-container">
+              <label for="phone_number">+880</label>
+              <input id="phone_number" type="text" name="phone_number" placeholder="Phone Number" pattern="[0]\d{10}" title="Enter a valid phone number" required/>
+            </div>
+            <button type="submit">Send OTP</button>
+        </form>
 
-        .registration-container {
-            background-color: #ffffff;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
+        <!-- OTP Verification Form -->
 
-        .registration-container input {
-            /* width: 100%; */
-            margin-bottom: 10px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .registration-container button {
-            background-color: #4caf50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
-
-        .registration-container button:hover {
-            background-color: #45a049;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="registration-container">
-        <h2>Register</h2>
-        <!-- Form to Send OTP -->
-    <form action="{% url 'send_otp' %}" method="POST">
-        {% csrf_token %}
-        <label for="phone_number">Phone Number:</label>
-        <input type="text" name="phone_number" id="phone_number" placeholder="Phone Number" required>
-        <button type="submit">Send OTP</button>
-    </form>
-
-    <!-- OTP Verification Form -->
-
-    <form action="{% url 'verify_otp' %}" method="POST">
-        {% csrf_token %}
-        <label for="password">Password:</label>
-        <input type="text" name="password" id="password" placeholder="Password" required>
-        <br>
-        <label for="otp">Enter OTP:</label>
-        <input type="text" name="otp" id="otp" placeholder="Enter OTP" required>
-        <input type="hidden" name="phone_number" value="{{ phone_number }}">
-        <button type="submit">Verify OTP</button>
-    </form>
+        <form style="padding: 0;" action="{% url 'verify_otp' %}" method="POST">
+          {% csrf_token %}
+          
+          <input type="text" name="password" id="password" placeholder="Password" required/>
+          <h3 for="otp">Enter OTP:</h3>
+          <div class="input-field">
+            <input type="number" name="otp" id="otp" />
+            <input type="number" name="otp" id="otp" disabled />
+            <input type="number" name="otp" id="otp" disabled />
+            <input type="number" name="otp" id="otp" disabled />
+          </div>  
+          <input type="hidden" name="phone_number" value="{{ phone_number }}" />
+          <button type="submit">Verify OTP</button>
+        </form>
+      </div>
+      <div class="toggle-container toggle-right">
+        <div class="toggle bg-right">
+          <div class="toggle-panel">
+            
+            <h1>Hello there!</h1>
+            <p>Welcome to medE</p>
+            <!-- <button id="login"><a href="{% url 'myregister' %}">Register Now</a></button> -->
+          </div>
+        </div>
+      </div>
     </div>
-</body>
+  </body>
+  <script>
+    const inputs = document.querySelectorAll("#otp"),
+    button = document.querySelector("button");
 
+    inputs.forEach((i, index1) => {
+      i.addEventListener("keyup", () => {
+        const currentInput = i,
+          nextInput = i.nextElementSibling,
+          prevInput = i.previousElementSibling;
+
+          if (currentInput.value.length > 1){
+            currentInput.value = "";
+            return;
+          }
+          if (nextInput && nextInput.hasAttribute("disabled") && currentInput.value !== ""){
+            nextInput.removeAttribute("disabled");
+            nextInput.focus();
+          }
+      });
+    });
+
+  </script>
 </html>
