--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>medE</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-	<link rel="icon" type="image/x-icon" href="{% static 'Favicon.png' %}">
+	<link rel="icon" type="image/x-icon" href="{% static 'favicon.png' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -445,8 +445,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">MEN'S CARE</h3>
+								<a href="{%url 'category' p_category='MENS'%}" class="menu-title">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='MENS'%}" class="menu-title">Show A</a>
 						</div>
 					</div>
 
@@ -457,9 +457,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">Women's Choice</h3>
-
+								<a href="{%url 'category' p_category='WOMEN'%}" class="menu-title">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='WOMEN'%}" class="menu-title">Show All</a>
 						</div>
 					</div>
 					<div class="category-item">
@@ -469,9 +468,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">Sexual Wellness</h3>
-
+								<a href="{%url 'category' p_category='Sexual Wellness'%}">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='Sexual Wellness'%}">Show All</a>
 						</div>
 					</div>
 					<div class="category-item">
@@ -481,9 +479,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">Baby Care</h3>
-
+								<a href="{%url 'category' p_category='BABY CARE'%}" class="menu-title">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='BABY CARE'%}" class="menu-title">Show All</a>
 						</div>
 					</div>
 					<div class="category-item">
@@ -493,8 +490,8 @@
 						<div class="category-content-box">
 							<div class="category-content-flex">
 								<h3 class="category-item-title">Diabetics Care</h3>
+								<a href="{%url 'category' p_category='Diabetes'%}">Show All</a>
 							</div>
-							<a href="{%url 'category' p_category='Diabetes'%}">Show All</a>
 						</div>
 					</div>
 				</div>
@@ -586,7 +583,7 @@
 		<div class="footer-top section">
 			<div class="container">
 				<div class="footer-brand">
-					<a href="#" class="logo"><img style="border-radius: 10px;" src="{% static 'Favicon.png' %}"
+					<a href="#" class="logo"><img style="border-radius: 10px;" src="{% static 'favicon.png' %}"
 							width="80" alt="logo"></a>
 					<p class="footer-text">
 						If you have any queries please contact us at <a href="mailto:support@gmail.com"
