--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -352,6 +352,7 @@
 		<!-- <h1>{{ user }}</h1> -->
 		<!-- <div class="container"> -->
 		<form action="{% url 'update_profile' %}" method="post" class="registration-form container row active">
+			<h1>Account</h1>
 			{% csrf_token %}
 			<div class="input-box col-sm-6">
 				<label for="">First Name</label>
@@ -363,11 +364,11 @@
 				<input class="lastname" type="text" name="last_name" placeholder="Last Name" value="{{ user.last_name }}">
 				<!-- <button><ion-icon name="create-outline"></ion-icon></button> -->
 			</div>
-			<div class="input-box col-sm-6">
+			<!-- <div class="input-box col-sm-6">
 				<label for="">Phone</label>
 				<input class="phone" type="phone" name="phone_number" placeholder="Phone Number" value="{{ user.phone_number }}">
-				<!-- <button><ion-icon name="create-outline"></ion-icon></button> -->
-			</div>
+				
+			</div> -->
 			<div class="input-box col-sm-6">
 				<label for="">Birth Date</label>				
 				<!-- Manually format user.dob using template tags -->
