login register full complete

--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -16,6 +16,13 @@
   <body>
     <div class="container" id="container">
         <div class="form-container sign-in">
+          <div>
+              {% if messages %}
+              {% for message in messages %}
+                  <h6>{{ message }}</h6>
+              {% endfor %}
+              {% endif %}
+          </div>
             <form name="form" method="post" action="{% url 'mylogin' %}">
                 {% csrf_token %}
                 <img src="{% static 'favicon.png' %}" alt=" medX logo">
@@ -27,18 +34,11 @@
                 <button type="submit">Login</button>
                 <button><a href="{% url 'forgotpassword' %}">Forgot Password?</a></button>
                 <button id="login"><a href="{% url 'myregister' %}">Register Now</a></button>
-                <!-- <div class="social-icons">
-                    <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
-                </div> -->
             </form>
         </div>
         <div class="toggle-container toggle-left">
           <div class="toggle bg-left">
             <div class="toggle-panel">
-              
               <h1>Welcome Back!</h1>
             </div>
           </div>
