--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -408,10 +408,10 @@
 			<p>{{p.0}}</p>
 			<div class="presc-box">
 				
-				<img src="{{p.0}}" alt="{{p.0}}" >
+				<img src="" alt="{{p.0}}" >
 				<h3>Uploaded: 23.07.23</h3>
 			</div>
-			<div class="popup-image" style="opacity: 0;"><img src="{{p.0}}" alt=""></div>
+			<div class="popup-image" style="opacity: 0;"><img src="" alt=""></div>
 		</div>
 		{%endfor%}
 		{%endfor%}
