--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -403,19 +403,18 @@
 			<button type="submit">Update Profile</button>
 		</form>
 
-		{% for item in medList %}
-        {% for p in item.prescriptions %}
         <div class="prescriptions container" id="prescriptions">
-            <p>{{p.0}}</p>
+			{% for item in medList %}
+			{% for p in item.prescriptions %}
             <div class="presc-box">
 
-                <img src="" alt="{{p.0}}" >
+                <img src="../../media/{{p.0}}" alt="" >
                 <h3>Uploaded: 23.07.23</h3>
             </div>
             <div class="popup-image" style="opacity: 0;"><img src="" alt=""></div>
+			{%endfor%}
+			{%endfor%}
         </div>
-        {%endfor%}
-        {%endfor%}
 
 
 		<div class="purchase-history container">
