OTC added in database

--- a/templates/index.html
+++ b/templates/index.html
@@ -543,16 +543,16 @@
 							<p class="showcase-badge">{{ product.p_discount|floatformat:"2" }}%</p>
 							{% endif %}
 
-
-							<div class="showcase-actions">
+								 <!--Cart button and Favorites button-->
+							<!-- <div class="showcase-actions">
 								<button id="{{ product.p_id }}" class="btn-action" onclick="ClearCart()">
 									<ion-icon name="heart-outline"></ion-icon>
 								</button>
 								<button id="{{ product.p_id }} " class="btn-action"
-									onclick="AddtoCart('{{product.p_id}}')"> <!--Cart button-->
+									onclick="AddtoCart('{{product.p_id}}')">
 
 								</button>
-							</div>
+							</div> -->
 						</div>
 
 						<div class="showcase-content">
