--- a/templates/category-wise.html
+++ b/templates/category-wise.html
@@ -343,16 +343,18 @@
 								<img  class="product-img default" src="{{ product.p_image.url }}" alt="{{ product.p_name }}" width="300">
 								<img  class="product-img hover" src="{{ product.p_image.url }}" alt="{{ product.p_name }}" width="300">
 							</a>
+							{% if product.p_discount > 0 %}
 							<p class="showcase-badge">{{ product.p_discount|floatformat:"2" }}%</p>
+							{% endif %}
 
-							<div class="showcase-actions">
+							<!-- <div class="showcase-actions">
 								<button class="btn-action">
 									<ion-icon name="heart-outline"></ion-icon>
 								</button>
 								<button class="btn-action">
 									<ion-icon name="bag-outline"></ion-icon>
 								</button>
-							</div>
+							</div> -->
 						</div>
 			
 						<div class="showcase-content">
@@ -363,10 +365,12 @@
 							</a>
 							
 							<div class="price-box">
-						
-                             <p class="price">৳{{ product.discounted_price|floatformat:"2"}}</p>
- 
+
+								<p class="price">৳{{ product.discounted_price|floatformat:"2"}}</p>
+								{% if product.p_discount > 0 %}
+
 								<del>{{ product.p_price|floatformat:"2" }}</del>
+								{% endif %}
 							</div>
 						</div>
 					
