--- a/templates/product_day.html
+++ b/templates/product_day.html
@@ -307,6 +307,12 @@
 						{% endif %}
                     </div>
 
+					<div class="otc-status">
+						{% if product_details.otc_status == 'no' %}
+							<p class="prescription-message">You need to provide a prescription for this medicine</p>
+						{% endif %}
+					</div>
+
                     <div class="quantity">
 						<button class="decrease-btn">-</button>
 						<span type="number" id="num" class="num">01</span>
