--- a/static/user-profile.css
+++ b/static/user-profile.css
@@ -745,6 +745,7 @@ body::-webkit-scrollbar-thumb:hover {
 main {
   position: relative;
   display: flex;
+  min-height: 100vh;
   height: auto;
   width: 100%;
 }
