--- a/templates/order_confirm.html
+++ b/templates/order_confirm.html
@@ -1,103 +1,93 @@
 <!DOCTYPE html>
 {% load static %}
 <html>
-  <head>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'order_confirm.css' %}"
-    />
-  </head>
-  <body>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'order_confirm.css' %}" />
+</head>
+
+<body>
     <header>
-      <div class="header-main" data-header>
-        <div class="container">
-          <a class="header-logo" href="{%url 'home'%}">
-            <img
-              src="{% static 'Logo.jpg' %}"
-              alt=" medX logo"
-              height="50px"
-              width="80px"
-            />
-          </a>
+        <div class="header-main" data-header>
+            <div class="container">
+                <a class="header-logo" href="{%url 'home'%}">
+                    <img src="{% static 'Logo.jpg' %}" alt=" medX logo" height="50px" width="80px" />
+                </a>
+            </div>
         </div>
-      </div>
-      
+
     </header>
     <main>
-      <div class="container">
-          <div class="purchase-history">
-            <table>
-              <thead>
-                <th>Product</th>
-                <th>Quantity</th>
-                <th>Price</th>
-              </thead>
-              <tbody>
-                {% for product_name, quantity, price in product_data_list %}
-                  <tr>
-                    <td>{{ product_name }}</td>
-                    <td>
-                      <span class="quantity">
-                        {{ quantity }}
-                        
-                      </span>
-                    </td>
-                    <td>{{ price }} Taka</td>
-                  </tr>
-                {% endfor %}
-                <tr style="background-color: rgb(195, 255, 139);">
-                  <td colspan="2" rowspan="1">Delivery Charge</td>
-                  <td >60 Taka</td>
-                </tr>
-                <tr style="background-color: rgb(195, 255, 139);">
-                  <td colspan="2" rowspan="2">Subtotal</td>
-                  <td>{{ total }}</td>
-                </tr>
-              </tbody>
-            </table>
-            <label for="address">Address:</label>
-            <input style="height: 60px;" type="text" id="addressInput" name="address" value='{{user_address}}'>
-            <a href="{% url 'confirm'%}?order_data={{product_data_list}}&total={{ total }}&address=" id="confirmLink"><button class="confirm-order" type="submit">Confirm Order</button></a>
-            </div>
-            
+        <div class="container">
+            <div class="purchase-history">
+                <table>
+                    <thead>
+                        <th>Product</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                    </thead>
+                    <tbody>
+                        {% for product_name, quantity, price in product_data_list %}
+                        <tr>
+                            <td>{{ product_name }}</td>
+                            <td>
+                                <span class="quantity">
+                                    {{ quantity }}
+                                </span>
+                            </td>
+                            <td>{{ price }} Taka</td>
+                        </tr>
+                        {% endfor %}
+                        <tr style="background-color: rgb(195, 255, 139);">
+                            <td colspan="2" rowspan="1">Delivery Charge</td>
+                            <td>60 Taka</td>
+                        </tr>
+                        <tr style="background-color: rgb(195, 255, 139);">
+                            <td colspan="2" rowspan="2">Subtotal</td>
+                            <td>{{ total }}</td>
+                        </tr>
+                    </tbody>
+                </table>
 
-        
-        
-        
-      </div>
+                {% if prescription_required == True %}
+                <label for="prescription">Upload Your prescription here</label>
+                <input type="file" id="file-upload" name="prescription" accept="image/*" required>
+                {% endif %}
+
+                <label for="address">Address:</label>
+                <input style="height: 60px;" type="text" id="addressInput" name="address" value='{{user_address}}'>
+
+                <a href="{% url 'confirm'%}?order_data={{product_data_list}}&total={{ total }}&address="
+                    id="confirmLink"><button class="confirm-order" type="submit">Confirm Order</button></a>
+            </div>
+        </div>
     </main>
     <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        // Get references to the input field and the link
-        const addressInput = document.getElementById('addressInput');
-        const confirmLink = document.getElementById('confirmLink');
-      
-        // Add a click event listener to the button
-        confirmLink.addEventListener('click', function(event) {
-          // Get the current value from the input field
-          const userAddress = addressInput.value;
-      
-          // Update the href attribute of the link with the user's address
-          confirmLink.href += encodeURIComponent(userAddress);
-        });
-      });
-      </script>
-      
+        document.addEventListener('DOMContentLoaded', function () {
+            // Get references to the input field and the link
+            const addressInput = document.getElementById('addressInput');
+            const confirmLink = document.getElementById('confirmLink');
+            const fileInput = document.getElementById('file-upload');
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+            // Add a click event listener to the button
+            confirmLink.addEventListener('click', function (event) {
+                // Get the current value from the input field
+                const userAddress = addressInput.value;
+
+                // Update the href attribute of the link with the user's address
+                confirmLink.href += encodeURIComponent(userAddress);
+            });
+        });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script type="module"
+        src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule
+        src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="text/javascript" src="{% static 'script.js' %}"></script>
-  </body>
+</body>
+
 </html>
