--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
 
 
 					</div>
-					<button class="search-btn">
+					<button class="search-btn" onclick="searchresults()">
 						<ion-icon name="search"></ion-icon>
 					</button>
 				</div>
