--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 				<div class="header-user-actions">
 					<div class="search-box">
 						<input class="search-txt" id="search-input2" type="text" placeholder="Type to search...">
-						<button class="mobile-srch-btn action-btn">
+						<button class="mobile-srch-btn action-btn" onclick="searchresults2()">
 							<ion-icon name="search-outline"></ion-icon>
 						</button>
 						<div id="search-results2">
