--- a/static/product.css
+++ b/static/product.css
@@ -234,67 +234,74 @@ body::-webkit-scrollbar-thumb:hover {
 	width: 25rem;
 	background: white;
 	z-index: 10;
-}
-
-.header-user-actions .shopping-cart.active {
+  }
+  
+  .header-user-actions .shopping-cart.active {
 	right: -350%;
 	transition: 0.7s ease;
-}
-
-.header-user-actions .shopping-cart .cartbox {
+  }
+  
+  .header-user-actions .shopping-cart .cartbox {
 	display: flex;
 	align-items: center;
 	gap: 1rem;
 	position: relative;
 	margin: 1rem 0;
-}
-
-.header-user-actions .shopping-cart .cartbox img {
+  }
+  
+  .header-user-actions .shopping-cart .cartbox img {
 	height: 5rem;
-}
-
-.header-user-actions .shopping-cart .cartbox .cart-trash {
-	font-size: 2rem;
-	position: absolute;
-	top: 50%;
-	right: 2rem;
+  }
+  
+  .header-user-actions .shopping-cart .cartbox .cart-trash {
+	float: right;
+	font-size: 1.8rem;
 	cursor: pointer;
 	color: black;
 	transform: translateY(-50%);
 	transition: 0.1s ease;
-}
-
-.header-user-actions .shopping-cart .cartbox .cart-trash:hover {
+  }
+  
+  .header-user-actions .shopping-cart .cartbox .cart-trash:hover {
 	color: var(--red);
-}
-
-.header-user-actions .shopping-cart .cartbox .cart-content h3 {
+  }
+  
+  .header-user-actions .shopping-cart .cartbox h3 {
 	color: black;
 	font-size: 1.5rem;
 	padding-bottom: 1rem;
-}
-
-.header-user-actions .shopping-cart .cartbox .cart-content span {
+  }
+  
+  .header-user-actions .shopping-cart .cartbox span {
 	color: var(--red);
-	font-size: var(--fs-5);
-}
-
-.header-user-actions .shopping-cart .cartbox .cart-content .quantity {
-	padding-left: 1rem;
-	font-family: 'poppins', sans-serif;
+	font-size: var(--fs-4);
+	text-align: center;
+	margin: auto 6px;
+  }
+  
+  .header-user-actions .shopping-cart .cartbox .quantity {
+	width: 80px;
+	height: 30px;
+	font-family: "poppins", sans-serif;
 	font-weight: 500;
-}
-
-.header-user-actions .shopping-cart .total {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 12px;
+	box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.2);
+  }
+  
+  .header-user-actions .shopping-cart .total {
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	font-size: 25px;
 	padding: 1rem 0;
-	font-family: 'poppins', sans-serif;
+	font-family: "poppins", sans-serif;
 	font-weight: 600;
 	text-align: center;
 	color: black;
-}
-.header-user-actions .shopping-cart .cart-checkout-btn {
+  }
+  
+  .header-user-actions .shopping-cart .cart-checkout-btn {
 	display: block;
 	padding: 5px 5px;
 	font-size: var(--fs-2);
@@ -306,13 +313,13 @@ body::-webkit-scrollbar-thumb:hover {
 	justify-content: center;
 	text-align: center;
 	transition: 0.3s ease;
-}
-
-.header-user-actions .shopping-cart .cart-checkout-btn:hover {
+  }
+  
+  .header-user-actions .shopping-cart .cart-checkout-btn:hover {
 	border: 2px solid var(--red);
 	background: var(--red);
 	color: white;
-}
+  }
 
 .header-user-actions .user-login {
 	position: absolute;
