--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -412,7 +412,7 @@
                 <img src="../../media/{{p.0}}" alt="{{p.0}}" >
                 <h3>Uploaded: 23.07.23</h3>
             </div>
-            <div class="popup-image" style="opacity: 0;"><img src="../../media/{{p.0}}" alt=""></div>
+            <div class="popup-image"><img src="../../media/{{p.0}}" alt=""></div>
 			{%endfor%}
 			{%endfor%}
         </div>
