search complete mayrebap

--- a/static/user-profile.css
+++ b/static/user-profile.css
@@ -207,7 +207,25 @@ body::-webkit-scrollbar-thumb:hover {
 .search-box .search-txt:focus {
   outline: 0;
 }
+#search-results,
+#search-results2 {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  background-color: white;
+  border-radius: 5px;
+  z-index: 10;
+}
+#search-results a,
+#search-results2 a {
+  color: black;
+  padding: 10px;
+}
 
+#search-results li:hover,
+#search-results2 li:hover {
+  background-color: rgba(222, 0, 0, 0.5);
+}
 /* .header-user-actions .search-box {
 	position: absolute;
 	right: -100%;
