--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -256,9 +256,9 @@
 	<div class="showcase">
 		<div class="showcase-banner">
 			<a href="{%url 'prod' p_name=product.p_name %}">
-				<img class="product-img default" src="media/{{ product.p_image }}"
+				<img class="product-img default" src="{{ product.p_image.url }}"
 					alt="{{ product.p_name }}" width="300">
-				<img class="product-img hover" src="media/{{ product.p_image }}"
+				<img class="product-img hover" src="{{ product.p_image.url }}"
 					alt="{{ product.p_name }}" width="300">
 			</a>
 			{% if product.p_discount > 0 %}
