--- a/templates/user-profile.html
+++ b/templates/user-profile.html
@@ -25,12 +25,13 @@
 				</a>
 				<div class="header-search-container">
 
-					<input type="search" name="search" id="search-input" class="search-field" placeholder="Type to search products...">
+					<input type="search" name="search" id="search-input" class="search-field"
+						placeholder="Type to search products...">
 					<div id="search-results">
 
-					
+
 					</div>
-					<button class="search-btn">
+					<button class="search-btn" onclick="searchresults()">
 						<ion-icon name="search"></ion-icon>
 					</button>
 				</div>
@@ -40,14 +41,15 @@
 				<div class="header-user-actions">
 					<div class="search-box">
 						<input class="search-txt" id="search-input2" type="text" placeholder="Type to search...">
-						<button class="mobile-srch-btn action-btn">
+						<button class="mobile-srch-btn action-btn" onclick="searchresults2()">
 							<ion-icon name="search-outline"></ion-icon>
 						</button>
 						<div id="search-results2">
 
-					
+
 						</div>
 					</div>
+
 					<button id="select-image" class="action-btn">
 						<img src="{%static 'prescription.png'%}" alt="prescription-upload-icon" width="30">
 					</button>
@@ -653,5 +655,6 @@ document.querySelectorAll('tr').forEach(async (row) => {
 <script type="text/javascript" src="{% static 'list.js' %}"></script>
 <script type="text/javascript" src="{% static 'prescription.js' %}"></script>
 <script type="text/javascript" src="{% static 'user-profile.js' %}"></script>
+<script type="text/javascript" src="{% static 'search.js' %}"></script>
 </body>
 </html> 
